[FFWEB-932] fixed overlapping of "remove filter" from slider in asn

--- a/demo-styles.css
+++ b/demo-styles.css
@@ -72,6 +72,10 @@ ff-searchbox input {
     color: #3c3c3b;
 }
 
+ff-slider-control {
+    position: relative;
+}
+
 button {
     cursor: pointer;
     display: inline-block;
